# ai-master

./: .gitignore  README.md  pyproject.toml
Ai-work/: linear_regression.py
ai_work/: ANN.py  CNN.py  SVM.py  decision_tree.py  k-means.py  linear_regression.py  logistic_regression.py
