
[project]
name = "ai_work"
version = "0.1.0"
description = ""
authors = [
    {name = "abdelrahman khattab",email = "abdelrahmankhattab9999@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "numpy (>=2.3.4,<3.0.0)",
    "scikit-learn (>=1.7.2,<2.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "matplotlib (>=3.10.7,<4.0.0)"
]

[tool.poetry.scripts]
linear = "ai_work.linear_regression:start"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
