
[project]
name = "ai_work"
version = "0.1.0"
description = ""
authors = [
    {name = "abdelrahman khattab",email = "abdelrahmankhattab9999@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0" 
[tool.poetry.dependencies]
scikit-learn = "^1.7.2"
pandas = "^2.3.3"
matplotlib = "^3.10.7"

[tool.poetry.scripts]
linear = "ai_work.linear_regression:start"
logistic = "ai_work.logistic_regression:start"
dtree = "ai_work.decision_tree:start"
svm = "ai_work.SVM:start"
kmeans = "ai_work.k-means:start"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
